# teskflow

./: .gitignore  README.md  main.py  pyproject.toml
api/: serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
config/: settings.py  urls.py
docs/: 001_FRS.md  002_Tasklist.md  003_ARD.md
